Update Multidex, add Auth & Firestore, & Success Login with Email

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,6 +49,7 @@ android {
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -70,5 +71,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
 
     implementation 'com.google.firebase:firebase-analytics'
+
+    implementation 'com.android.support:multidex:1.0.3'
+
+    implementation 'androidx.multidex:multidex:2.0.1'
     ///implementation 'com.google.firebase:firebase-analytics-ktx'
 }
