--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.2.0
+  firebase_auth: ^3.2.0
+  cloud_firestore: ^3.1.0
 
 dev_dependencies:
   flutter_test:
