add create vote screen and other fix

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   persistent_bottom_nav_bar: ^4.0.2
   flutter_svg: ^0.23.0+1
   google_fonts: ^2.0.0
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
