--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^2.0.0
   flutter_datetime_picker: ^1.5.1
   random_string: ^2.3.1
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
