--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.2.0
   firebase_auth: ^3.2.0
+  firebase_storage: ^10.1.0
   cloud_firestore: ^3.1.0
   persistent_bottom_nav_bar: ^4.0.2
   flutter_svg: ^0.23.0+1
