--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   random_string: ^2.3.1
   image_picker: ^0.8.4+4
+  stop_watch_timer: ^1.3.1
 
 dev_dependencies:
   flutter_test:
