--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   random_string: ^2.3.1
   image_picker: ^0.8.4+4
   stop_watch_timer: ^1.3.1
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
