--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^0.8.4+4
   stop_watch_timer: ^1.3.1
   share: ^2.0.4
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
