--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   stop_watch_timer: ^1.3.1
   share: ^2.0.4
   provider: ^5.0.0
+  sliver_tools: ^0.2.5
 
 dev_dependencies:
   flutter_test:
