--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   share: ^2.0.4
   provider: ^5.0.0
   sliver_tools: ^0.2.5
+  connectivity_plus: ^2.1.0
 
 dev_dependencies:
   flutter_test:
