--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,14 +39,14 @@ dependencies:
   firebase_storage: ^10.1.0
   cloud_firestore: ^3.1.0
   persistent_bottom_nav_bar: ^4.0.2
-  flutter_svg: ^0.23.0+1
+  flutter_svg: ^1.0.0
   google_fonts: ^2.0.0
   flutter_datetime_picker: ^1.5.1
   random_string: ^2.3.1
   image_picker: ^0.8.4+4
   stop_watch_timer: ^1.3.1
   share: ^2.0.4
-  provider: ^5.0.0
+  provider: ^6.0.1
   sliver_tools: ^0.2.5
   connectivity_plus: ^2.1.0
 
