--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   provider: ^6.0.1
   sliver_tools: ^0.2.5
   connectivity_plus: ^2.1.0
+  ntp: ^2.0.0
 
 dev_dependencies:
   flutter_test:
