--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   sliver_tools: ^0.2.5
   connectivity_plus: ^2.1.0
   ntp: ^2.0.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
