--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -52,6 +52,7 @@ dependencies:
   ntp: ^2.0.0
   shimmer: ^2.0.0
   flutter_slidable: ^1.1.0
+  firebase_dynamic_links: ^4.0.3
 
 dev_dependencies:
   flutter_test:
