--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -39,6 +39,11 @@
 			<string>UIInterfaceOrientationLandscapeLeft</string>
 			<string>UIInterfaceOrientationLandscapeRight</string>
 		</array>
+                <key>FirebaseDynamicLinksCustomDomains</key>
+                <array>
+                        <string>https://votie.mineversal.com/poll</string>
+                        <string>https://votie.page.link/poll</string>
+                </array>
 		<key>UIViewControllerBasedStatusBarAppearance</key>
 		<false/>
 		<key>UIStatusBarHidden</key>
