--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   shimmer: ^2.0.0
   flutter_slidable: ^1.1.0
   go_router: ^2.5.5
+  shared_preferences: ^2.0.11
+  url_launcher: ^6.0.17
 
 dev_dependencies:
   flutter_test:
